[package]
name = "rscrn"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", default-features = false, features = ["std", "derive", "help", "color", "usage", "error-context", "string"] }
humantime = "2.1.0"
rdev = "0.5.3"

[profile.release]
lto = true
codegen-units = 1
strip = true